More DB session thread local references were removed.